--- a/client/package.json
+++ b/client/package.json
@@ -3,10 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "grommet": "^2.0.0-rc",
+    "grommet-icons": "^3.1.0-beta.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts-ts": "3.1.0"
+    "react-scripts-ts": "3.1.0",
+    "styled-components": "^4.1.2"
   },
+  "proxy": "http://localhost:5000/",
   "scripts": {
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
