--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
     "mongoose": "^5.3.15",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
-    "passport-twitter": "^1.0.4"
+    "passport-twitter": "^1.0.4",
+    "twit": "^2.2.11"
   },
   "scripts": {
     "start": "yarn run serve",
@@ -44,6 +45,7 @@
     "@types/morgan": "^1.7.35",
     "@types/passport": "^0.4.7",
     "@types/passport-twitter": "^1.0.34",
+    "@types/twit": "^2.2.20",
     "concurrently": "^3.5.1",
     "node-sass": "^4.7.2",
     "nodemon": "^1.13.0",
